@startuml

title __APP's Class Diagram__\n

  package com.harisha.smartfarmdairy {
    class BuildConfig {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Calculator {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class DatabaseHelper {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Equipment {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Expenses {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class Income {
    }
  }
  

  package com.harisha.smartfarmdairy {
    class MainActivity {
    }
  }
  

  Calculator -up-|> AppCompatActivity
  DatabaseHelper -up-|> SQLiteOpenHelper
  Equipment -up-|> AppCompatActivity
  Expenses -up-|> AppCompatActivity
  Expenses o-- DatabaseHelper : databaseHelper
  Income -up-|> AppCompatActivity
  Income o-- DatabaseHelper : helper
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- DatabaseHelper : helper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
